--- a/app/views/partials/crime.html
+++ b/app/views/partials/crime.html
@@ -4,7 +4,7 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 height100 crime-container">
     <div class="crime-body">
         <div id="crime-header">
-            <div>HISTORICAL CRIME TRENDS</div>
+            <div>Historical Crime Trends</div>
             <br><br><br><br><br><br><br>
         </div>
 
