--- a/app/views/index.html
+++ b/app/views/index.html
@@ -96,7 +96,9 @@
 
         <!-- D3 -->
         <script src="http://d3js.org/d3.v3.min.js"></script>
-        <!-- GOOGLE CHARTS -->
+        <!-- HIGHCHARTS -->
+        <script src="http://code.highcharts.com/highcharts.js"></script>
+
 
 
 </body>
