--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -127,7 +127,7 @@ div.row.ng-scope{
 }
 
 .main-mouseoverText #main-about{
-    margin-right: -135px;
+    margin-right: -128px;
 }
 
 .main-mouseoverText #main-his-crime-data{
@@ -199,7 +199,7 @@ div.row.ng-scope{
 .crime-container{
     padding-left: 10%;
     padding-right: 10%;
-    height: 1000px;
+    height: 800px;
     width: 100%;
     /*position: relative;*/
 }
@@ -228,6 +228,16 @@ div.container.height100.ng-scope{
     color: #EEE;
     margin-left: 40px;
 }*/
+
+#crime-highcharts{
+    width: 100%;
+    height: 450px;
+}
+
+.crime-buttons{
+    margin-right: 10%;
+    margin-left: 15%;
+}
 
 /*------------------*/
 /*ICONS IN THE ABOUT PAGE*/
