modulus.io database populated and heroku deployment displaying markers and clusters.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -117,6 +117,11 @@ div.row.ng-scope{
 #main-addInput{
     width: 100%;
     color: #000;
+    border-radius: 20px;
+}
+
+#main-search{
+    border-radius: 20px;
 }
 
 .main-mouseoverText{
