--- a/app/views/index.html
+++ b/app/views/index.html
@@ -42,6 +42,7 @@
 <!-- END D3 CODE -->
 
 <!--  -->
+<!-- background="/views/partials/dark-maiden.jpg" bgproperties="fixed" -->
 <body ng-app="crimespaceAngularApp" class="height100" id="main" background="/views/partials/dark-maiden.jpg" bgproperties="fixed">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -78,7 +79,6 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
@@ -89,17 +89,13 @@
         <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>
         <script src='bower_components/lodash/dist/lodash.underscore.min.js'></script>
         <script src='bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
-
-
-        <script type="text/javascript" src="scripts/ngAutoComplete.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 
         <!-- D3 -->
         <script src="http://d3js.org/d3.v3.min.js"></script>
         <!-- HIGHCHARTS -->
         <script src="http://code.highcharts.com/highcharts.js"></script>
-
-
+        <!-- ngAutocomplete -->
 
 </body>
 </html>
