--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -12,7 +12,7 @@
                 <span id="main-addInput" class="height100">
                     <!-- The 'options' & 'details' are ngAutoComplete attributes -->
                     <!-- 'details="details"' is where the lat/long information comes from -->
-                    <input type="text" value="Enter Address" ng-autocomplete ng-model="autocomplete" options="options" details="details"/>
+                    <input style="border-radius:21px;" placeholder="  Search" type="text" value="Enter Address" ng-autocomplete ng-model="autocomplete" options="options" details="details"/>
                 </span>
                 <br><br>
             </div>
