Fix background image, ngAutocomplete, and google fonts on Heroku.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,8 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
@@ -21,7 +22,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/cyborg/bootstrap.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="styles/main.css">
 
 
@@ -43,7 +44,7 @@
 
 <!--  -->
 <!-- background="/views/partials/dark-maiden.jpg" bgproperties="fixed" -->
-<body ng-app="crimespaceAngularApp" class="height100" id="main" background="/views/partials/dark-maiden.jpg" bgproperties="fixed">
+<body ng-app="crimespaceAngularApp" class="height100" id="main" background="/images/dark-maiden.jpg" bgproperties="fixed">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -84,6 +85,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
         <script type="text/javascript" src="scripts/controllers/crime.js"></script>
+        <script src="scripts/ngAutocomplete.js"></script>
         <!-- endbuild -->
 
         <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>
@@ -96,6 +98,7 @@
         <!-- HIGHCHARTS -->
         <script src="http://code.highcharts.com/highcharts.js"></script>
         <!-- ngAutocomplete -->
+
 
 </body>
 </html>
