Use SetTimeout() to display text to user and have social icons fade in.

--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -32,7 +32,15 @@
             </div>
                 <br>
             </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br>
+                <div id="main-gif">
+                    <p>Please wait while the
+                        <br>
+                        map is populated with
+                        <br>clusters and markers.
+                    </p>
+                </div>
+        <br><br><br><br><br><br>
                 <div class="addthis_sharing_toolbox"></div>
         </div>
 
@@ -44,6 +52,8 @@
 
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53c04c7f2a875a42"></script>
+
+
 
 
 
