--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -137,9 +137,15 @@ div.row.ng-scope{
     margin-right: -180px;
 }
 
-/*.addthis_sharing_toolbox{
-    position: absolute;
-}*/
+#main-gif{
+    font-size: 1.5em;
+    color: #FFF;
+}
+
+.addthis_sharing_toolbox{
+    /*position: absolute;*/
+    display: none;
+}
 
 .container-narrow > hr {
   margin: 30px 0;
