--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -1,74 +1,15 @@
 
 
-    <div class="row height100">
-        <div class="col-md-2">
-            <div id="header-whole">
-                <p id="header">Crimen<p>
-                <p id="sub-header">NYC's Crime Map</p>
-            </div>
-            <p class="height100">
-
-            </p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <p class="navigation" id="nav-list">
-                <a href="/">Map</a>
-                <br>
-                <a href="/about">About</a>
-                <br>
-                <a href="/crime">D3</a>
-            <p>
-            <br>
-            <br>
-            <br>
-                <ul class="about-icons">
-                    <li class="twitter">
-                        <a href="https://twitter.com/hacker_adi">
-                            <span class="fa fa-twitter fa-2x" style="color: #CCC"></span>
-                        </a>
-                    </li>
-                    <li class="github">
-                        <a href="https://github.com/AdiedX">
-                            <span class="fa fa-github fa-2x" style="color: #CCC"></span>
-                        </a>
-                    </li>
-                </ul>
-        </div>
-
-        <div class="col-md-10 height100 no-padding" id="background-dim-md-10">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 height100 about-container">
+    <div class="about-body">
+        <div id="about-header">
             <br><br><br>
-            <p id="about-text">
-                Crimen is a crime map for New York City.  It was developed using the MEAN stack (MongoDB, Express.js, Angular.js, and Node.js)
-                <br>
-                by Adi Sivasankaran, a student at Fullstack Academy.
-                <br>
-                <br>
-                There are many future functionalities to come to this web application, including D3 graphical representations of historical crime data, by boroughs and precincts.
-                <br><br>
-            </p>
+            <div style="color: white; font-size: 2em; text-align:center;">About [UNDER CONSTRUCTION]</div>
         </div>
-
-<!--        <div class="col-md-2">
-            </div> -->
+        <br><br>
+        <div class="about-introduction" ng-show="showIntro" class="ng-hide">
+UNDER CONSTRUCTION
+        </div>
+        <div id="about-highcharts"></div>
     </div>
-    <!-- THIS IS SUPPOSED TO WORK AND IS THE BEST WAY TO DO MARKERS.  FIGURE IT OUT!!! -->
-<!--         <markers idkey="'id'" models='crimeMarkers' coords="'self'" icon="'icon'" click="'onClicked'"></markers> -->
-
- <!--         <marker ng-repeat="marker in crimeMarkers" coords="{longitude: marker.longitude, latitude: marker.latitude}" click="'onClicked'" doCluster="doClusterRandomMarkers" clusterOptions="clusterOptions"></marker> -->
-
-
 </div>
-
-<div class="row marketing">
-
-  <!-- <div ng-repeat="thing in awesomeThings"> -->
-    <!-- What is thing? -->
-<!--       <h4>{{thing.name}}</h4>
-      <p>{{thing.info}}</p> -->
-
-
-  <!-- </div> -->
-</div>
-
