--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -32,14 +32,21 @@
             </div>
                 <br>
             </div>
+<!--                 <div id="main-promptText-2">
+                    <p>Search for crimes
+                        <br>
+                        by address
+                    </p>
+                </div> -->
             <br><br><br><br><br>
-                <div id="main-gif">
+                <div id="main-promptText-1">
                     <p>Please wait while the
                         <br>
                         map is populated with
                         <br>clusters and markers.
                     </p>
                 </div>
+
         <br><br><br><br><br><br>
                 <div class="addthis_sharing_toolbox"></div>
         </div>
