Add unit tests for MainCtrl and API.

--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -1,15 +1,13 @@
 
 
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 height100 about-container">
-    <div class="about-body">
-        <div id="about-header">
-            <br><br><br>
-            <div style="color: white; font-size: 2em; text-align:center;">About [UNDER CONSTRUCTION]</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 height100 crime-container">
+    <div class="crime-body">
+        <div id="crime-header">
+            <div>About</div>
         </div>
         <br><br>
-        <div class="about-introduction" ng-show="showIntro" class="ng-hide">
-UNDER CONSTRUCTION
+        <div class="crime-introduction">
+            Crimen blah blah blah blah blah
         </div>
-        <div id="about-highcharts"></div>
     </div>
 </div>
