Fix Google errors and 0 execution error.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -89,10 +89,12 @@
         <!-- endbuild -->
 
         <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script> 
         <script src='bower_components/lodash/dist/lodash.underscore.min.js'></script>
-        <script src='bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
-        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
-
+        <script src="bower_components/bluebird/js/browser/bluebird.js"></script>
+        <script src='bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
+        
+        
         <!-- D3 -->
         <script src="http://d3js.org/d3.v3.min.js"></script>
         <!-- HIGHCHARTS -->
